Additional error fixes and refactoring

--- a/src/TestEngine/agents/testcentric-agent.csproj
+++ b/src/TestEngine/agents/testcentric-agent.csproj
@@ -18,6 +18,9 @@
   <ItemGroup Condition="'$(TargetFramework)'=='net40'">
     <Reference Include="System.Runtime.Remoting" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp2.1'">
+    <Reference Include="System.Runtime" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="..\EngineVersion.cs" LinkBase="Properties" />
   </ItemGroup>
