--- a/src/TestEngine/testcentric.engine.core.tests/testcentric.engine.core.tests.csproj
+++ b/src/TestEngine/testcentric.engine.core.tests/testcentric.engine.core.tests.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <RootNamespace>NUnit.Engine</RootNamespace>
+    <RootNamespace>TestCentric.Engine</RootNamespace>
     <TargetFrameworks>net35;net40;netcoreapp1.1;netcoreapp2.1</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\nunit.snk</AssemblyOriginatorKeyFile>
     <DebugType>Full</DebugType>
     <OutputPath>..\..\..\bin\$(Configuration)\engine-tests\</OutputPath>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup Condition="'$(TargetFramework)'=='net35'">
     <Reference Include="System.Configuration" />
